# src/main/java/com/nokhrin/accounting/controller/AccountController.java
@@ -1,30 +1,0 @@
-package com.nokhrin.accounting.controller;
-
-import com.nokhrin.accounting.dto.AccountResponse;
-import com.nokhrin.accounting.dto.CreateAccountRequest;
-import com.nokhrin.accounting.service.AccountService;
-import jakarta.validation.Valid;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-@RestController
-@RequestMapping("/accounts")
-public class AccountController {
-
-    private final AccountService accountService;
-
-    public AccountController(AccountService accountService) {
-        this.accountService = accountService;
-    }
-
-    @PostMapping
-    public ResponseEntity<AccountResponse> createAccount(
-            @Valid @RequestBody CreateAccountRequest request) {
-        AccountResponse response = accountService.createAccount(request);
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
-    }
-}
