# src/main/java/com/nokhrin/accounting/entity/TransactionType.java
@@ -1,7 +1,0 @@
-package com.nokhrin.accounting.entity;
-
-public enum TransactionType {
-    DEPOSIT,
-    WITHDRAWAL,
-    TRANSFER
-}
